more fixes on uneven lists

--- a/onestopshopper/css/stylesheet.css
+++ b/onestopshopper/css/stylesheet.css
@@ -564,7 +564,7 @@ input[type=submit] {
 	}
 
 	.list-item {
-		width: 101%;
+		width: 102.75%;
 	}
 
 	.list-item img{
@@ -833,7 +833,7 @@ input[type=submit] {
 	}
 
 	.list-item {
-		width: 100%;
+		width: 100.5%;
 	}
 
 	.list-item img{
